# feign-rs

./: .gitignore  Cargo.toml  README.md
feign/: Cargo.toml  README.md
feign-common/: Cargo.toml
feign-common/src/: lib.rs
feign-macros/: Cargo.toml  README.md
feign-macros/src/: lib.rs
feign/src/: lib.rs  tests.rs
feign/src/re_exports/: mod.rs
guides/: README.md
test/test-feign/: Cargo.toml
test/test-feign/src/: exp.rs  main.rs
test/test-server/: Cargo.toml
test/test-server/src/: main.rs
