[package]
name = "feign"
version = "0.1.2"
edition = "2021"
authors = ["niuhuan <niuhuancn@outlook.com>"]
description = "Rest client of Rust"
license = "MIT"
repository = "https://github.com/niuhuan/feign-rs"

[dependencies]
feign-macros = { path = "../feign-macros" }
feign-common = { path = "../feign-common" }

[lib]
