[package]
name = "feign"
version = "0.1.6"
edition = "2021"
authors = ["niuhuan <niuhuancn@outlook.com>"]
description = "Rest client of Rust"
license = "MIT"
repository = "https://github.com/niuhuan/feign-rs"

[dependencies]
anyhow = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
reqwest = { version = "0", features = ["json"] }
feign-macros = { path = "../feign-macros" }

[lib]
