[package]
name = "feign"
version = "0.1.9"
edition = "2021"
authors = ["niuhuan <niuhuancn@outlook.com>"]
description = "Rest client of Rust"
license = "MIT"
repository = "https://github.com/niuhuan/feign-rs"

[dependencies]
anyhow = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
reqwest = { version = "0", features = ["json"], default-features = false }
feign-macros = { path = "../feign-macros" }

[lib]

[features]
default = ["reqwest/default"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
rustls-tls-manual-roots = ["reqwest/rustls-tls-manual-roots"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
