[package]
name = "test-feign"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
feign = { path = "../../feign" }
serde = "1"
serde_derive = "1"
tokio = { version = "1.15", features = ["macros", "rt-multi-thread"] }
