[package]
name = "test-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.133"
serde_derive = "1.0.133"
serde_json = "1.0.75"
warp = "0.3.2"
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
